<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="true">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />

        <item
            android:id="@+id/myAccount"
            android:icon="@drawable/ic_account"
            android:title="@string/myAccount" />

        <item
            android:id="@+id/admin"
            android:icon="@drawable/ic_admin"
            android:title="@string/login_admin" />

        <item
            android:id="@+id/delivery"
            android:icon="@drawable/ic_delivery"
            android:title="@string/login_delivery" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:icon="@drawable/ic_info"
                android:title="About" />
        </menu>
    </item>
</menu>