<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/drawer_toolbar"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="Work Place" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Choose your delicious meal" />

            <!-- food items-->
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <!-- first -->
               <androidx.cardview.widget.CardView
                   android:id="@+id/veg"
                   android:layout_width="150dp"
                   android:layout_height="250dp"
                   android:layout_marginTop="30dp"
                   app:cardCornerRadius="20dp">


                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                            android:padding="30dp"
                           android:src="@drawable/ic_design_circle" />

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="30dp"
                           android:src="@drawable/ic_favorite" />
                   </LinearLayout>


                   <de.hdodenhof.circleimageview.CircleImageView
                       android:layout_width="100dp"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:src="@drawable/veg_salad"  />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="180dp"
                        android:padding="10dp"
                        android:text="@string/veg_salad" />
                   <LinearLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="220dp"
                           android:paddingLeft="20dp"
                           android:textColor="@color/green"
                           android:text="N2000" />

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="220dp"
                           android:paddingLeft="60dp"
                           android:textColor="@color/green"
                           android:src="@drawable/ic_add_circle" />
                   </LinearLayout>
           </androidx.cardview.widget.CardView>

               <!-- 2nd -->
               <androidx.cardview.widget.CardView
                   android:id="@+id/spaghetti"
                   android:layout_width="150dp"
                   android:layout_height="250dp"
                   android:layout_marginTop="30dp"
                   android:padding="20dp"
                   android:layout_marginLeft="30dp"
                   app:cardCornerRadius="20dp">


                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="30dp"
                           android:src="@drawable/ic_design_circle" />

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="30dp"
                           android:src="@drawable/ic_favorite_plain" />
                   </LinearLayout>

                   <de.hdodenhof.circleimageview.CircleImageView
                       android:layout_width="100dp"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:src="@drawable/spaghetti"  />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="180dp"
                       android:padding="10dp"
                       android:text="@string/spaghetti" />
                   <LinearLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="220dp"
                           android:paddingLeft="20dp"
                           android:textColor="@color/green"
                           android:text="N3000" />

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="220dp"
                           android:paddingLeft="60dp"
                           android:textColor="@color/green"
                           android:src="@drawable/ic_add_circle_plain" />
                   </LinearLayout>
               </androidx.cardview.widget.CardView>
       </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- third -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fries"
                    android:layout_width="150dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="50dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="30dp"
                            android:src="@drawable/ic_design_circle" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="30dp"
                            android:src="@drawable/ic_favorite_plain" />
                    </LinearLayout>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/fries"  />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="180dp"
                        android:padding="10dp"
                        android:text="@string/fries" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="220dp"
                            android:paddingLeft="20dp"
                            android:textColor="@color/green"
                            android:text="N1500" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="220dp"
                            android:paddingLeft="60dp"
                            android:textColor="@color/green"
                            android:src="@drawable/ic_add_circle_plain" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- fourth-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cupcake"
                    android:layout_width="150dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="50dp"
                    android:padding="20dp"
                    android:layout_marginLeft="30dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="30dp"
                            android:src="@drawable/ic_design_circle" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="30dp"
                            android:src="@drawable/ic_favorite" />
                    </LinearLayout>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="104dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/cupcakes" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="180dp"
                        android:padding="10dp"
                        android:text="@string/cupcake" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="220dp"
                            android:paddingLeft="20dp"
                            android:textColor="@color/green"
                            android:text="N1700" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="220dp"
                            android:paddingLeft="60dp"
                            android:textColor="@color/green"
                            android:src="@drawable/ic_add_circle"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

       </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/drawer_header"
            app:menu="@menu/drawer_menu" >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>